Fix RAM display scrollbar

--- a/public/css/index.less
+++ b/public/css/index.less
@@ -87,7 +87,7 @@ body {
 }
 
 #viewer-memory-scroll-space {
-  width: 0;
+  width: 1px;
   height: 10000px;
 }
 
